# unleashed

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  DMA_SCAN_RESULTS.txt  build-release.ps1  build_key2probe.bat  config.heroes.json  config.ini  ne150818_overlay_sample.csv  package-test-release.bat  package-test-release.ps1  rage_xy0headonly.heroes.json  rage_xy0headonly.ini
data/: aim_public_hero_geometry_0530.tsv  aim_public_sources_0530.md  aim_public_weapon_projectiles_0530.tsv  aim_qa_completion_0530.md  overwatch_weapon_cadence_20260714.tsv
docs/: UNLEASHED_DEVELOPMENT_GUIDE.zh-CN.md  debug-acceptance-standard-20260630.zh-CN.md  decrypt_chain.md  dma-next-optimization-handoff-after-prefetch-20260619.zh-CN.md  dma-next-optimization-report-20260619-1246.zh-CN.md  dma-read-frequency-optimization-handoff.zh-CN.md  dma-read-frequency-optimization-report-20260619-1111.zh-CN.md  dma-reference-research-and-optimization-handoff.zh-CN.md  dma-reference-research-and-optimization-report-20260619-1220.zh-CN.md  overlay-box-fps-optimization-handoff.zh-CN.md  overlay-box-fps-optimization-report-20260619-1147.zh-CN.md  overlay-fps-task0-observability-report-20260625.zh-CN.md  render-entity-dma-regression-review-20260624.zh-CN.md
docs/code-reading/: 00-reading-map.zh-CN.md  01-config-ui-runtime-chain.zh-CN.md  02-entity-pipeline.zh-CN.md  03-aim-prediction-fire.zh-CN.md  README.zh-CN.md
include/: resource.h
include/Features/: UI.hpp
include/Game/: AbilityIcons.hpp  AimArchitecture.hpp  AimFirePhase.hpp  AimHybridController.hpp  AimSmoothingTiming.hpp  AimStartLimiter.hpp  BoneSlots.hpp  Decrypt.hpp  DecryptEmulator.hpp  Entity.hpp  EntityRosterPolicy.hpp  FovGeometry.hpp  GameData.hpp  HeroGeometrySpec.hpp  HeroPerkLookupSeed.hpp  HeroPerkRuntime.hpp  HeroPerks.hpp  HeroProfileSwitch.hpp  HeroSkills.hpp  InputOrchestrator.hpp  LeadPrediction.hpp  Motion.hpp  Offsets.hpp  OutputOwnership.hpp  OutputScheduler.hpp  Overwatch.hpp  SDK.hpp  Structs.hpp  Target.hpp  TrackingContinuityPolicy.hpp  TriggerBoneSelection.hpp  WeaponCadence.hpp  WeaponSpec.hpp
include/Kmbox/: KmBoxConfig.h  KmBoxData.h  KmBoxMock.h  KmBoxNetManager.h  KmboxB.h  KmboxMoveTest.h  KmboxRuntime.hpp  KmboxTimerResolution.h
include/Memory/: KeyState.hpp  Memory.h  MemoryRanges.h
include/Renderer/: IconManager.hpp  Overlay.hpp  Renderer.hpp
include/Utils/: Config.hpp  CrashDump.hpp  Diagnostics.hpp  HostMouseDpi.hpp  InputLabels.hpp  ProcessConnection.hpp  TestServer.hpp  Types.hpp
logs/: baseline-20260625-185934-diagnostics.json  baseline-20260625-185934-entities.json  baseline-20260625-185934-health.json  baseline-20260625-185934-local.json  bz151177-chain-labelcheck-20260630-192850.out.txt  bz151177-chain-labelcheck-20260630-192935.out.txt  bz151177-chain-runtime-20260630-192421.out.txt  bz151177-position-final-20260630-191247.out.txt  bz151177-testserver-20260630-182130.out.txt  bz151177-testserver-20260630-182900.out.txt  bz151177-testserver-20260630-183214.out.txt  collect-baseline-20260629-083231.console.txt  collect-coldtopo-mapcache-20260629-084502.console.txt  collect-coldtopo-mapcache-skill1-20260629-084917.console.txt  collect-mapcache-20260629-083951.console.txt  collect-mapcache-spikecheck-20260629-085550.console.txt  collect-mapdiag-20260629-083624.console.txt  live-bz-matrix-source-20260701-012807.out.txt  live-diagnostics-20260701-074942.json  live-diagnostics-after-monitor-20260701-075242.json  live-diagnostics-v2-after-monitor-20260701-075840.json  live-entities-20260701-074942.json  live-entities-after-monitor-20260701-075242.json  live-entities-v2-after-monitor-20260701-075840.json  live-health-20260701-074942.json  live-health-v2-after-monitor-20260701-075840.json  overlay-distance-fallback-20260630-184312.out.txt  overlay-empty-debug-20260630-184046.out.txt  perf-monitor-20260625-012732.samples.csv  perf-monitor-20260625-012732.summary.json  perf-monitor-20260625-013521.samples.csv  perf-monitor-20260625-013521.summary.json  perf-monitor-20260625-014248.samples.csv  perf-monitor-20260625-014248.summary.json  perf-monitor-20260625-014813.samples.csv  perf-monitor-20260625-014813.summary.json  perf-monitor-20260625-022119.samples.csv  perf-monitor-20260625-022119.summary.json  perf-monitor-20260625-022304.samples.csv  perf-monitor-20260625-022304.summary.json  (+293 more)
scripts/: analyze-unleashed-perf.ps1  analyze-unleashed-spikes.ps1  collect-unleashed-mapdiag.ps1  compare-unleashed-perf.ps1  monitor-unleashed-perf.ps1
src/: cn_server_scanner.cpp  decrypt_emu.cpp  decrypt_probe.cpp  decryptdump.cpp  decryptdump2.cpp  dma_verify_constants.cpp  final_probe.cpp  hero_probe.cpp  host_mouse_hold.cpp  key2_probe.cpp  key2hunt2.cpp  keybrute.cpp  keyscan.cpp  main.cpp  perk_probe.cpp  quick_diag.cpp  quick_diag2.cpp  quick_diag3.cpp  quick_diag4.cpp  quick_diag5.cpp  scanner.cpp  simple_probe.cpp  unleashed.rc
src/Features/: UI.cpp
src/Game/: HeroGeometrySpec.cpp  HeroPerkRuntime.cpp  HeroSkillSequenceDefaultsTest.cpp  HeroSkills.cpp  Offsets.cpp  OutputOwnership.cpp  OutputScheduler.cpp  WeaponCadence.cpp  WeaponSpec.cpp
src/Kmbox/: AngleMathTest.cpp  KmBoxMock.cpp  KmBoxNetManager.cpp  KmboxB.cpp  KmboxMoveTest.cpp  KmboxRuntime.cpp  KmboxTimerResolution.cpp
src/Memory/: Memory.cpp
src/Renderer/: IconManager.cpp  Overlay.cpp  Renderer.cpp
src/Tools/: AimFirePhaseSelfTest.cpp  AimHybridControllerSelfTest.cpp  AimPresetConfigSelfTest.cpp  AimStartLimiterSelfTest.cpp  CnOffsetProbe.cpp  FovConfigSelfTest.cpp  HeroGeometrySpecSelfTest.cpp  HeroPerkClassifierSelfTest.cpp  HeroSkillConfigSelfTest.cpp  InputOwnershipSelfTest.cpp  KeyStateSelfTest.cpp  KmboxLifecycleSelfTest.cpp  KmboxQueueSelfTest.cpp  KmboxRuntimeSwitchSelfTest.cpp  LeadPredictionSelfTest.cpp  MockHardwareSelfTest.cpp  MotionEstimatorSelfTest.cpp  RuntimeRegressionPolicySelfTest.cpp  TrackingDeadzoneDampingSelfTest.cpp  TriggerBoneSelectionSelfTest.cpp  WeaponCadenceSelfTest.cpp  WeaponSpecDisplaySelfTest.cpp
src/Utils/: Config.cpp  (+4 more)
tools/: ashe-sequence-scan.ps1  kmbox-right-protocol-probe.ps1
(+3 files in other folders)
